# Team-Projects-Group-17

./: .gitignore  CMakeLists.txt  README.md  app.js  index.html  main.cpp  server.js  style.css
Web-Server/: README.md  app.js  index.html  package-lock.json  package.json  server.js  style.css
encryption-decryption/: README.md  main.cpp
encryption-decryption/src/: crypto.cpp  crypto.h  secure_transfer.cpp  secure_transfer.h
red_circles/: CMakeLists.txt  README.md  main.py
src/: crypto.cpp  crypto.h  secure_transfer.cpp  secure_transfer.h
transmission/: receive_images.py  send_images.py
